# screensaver.stars

./: .gitignore  .travis.yml  CMakeLists.txt  FindOpenGLES.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
screensaver.stars/: addon.xml  addon.xml.in
screensaver.stars/resources/: settings.xml
screensaver.stars/resources/language/resource.language.af_za/: strings.po
screensaver.stars/resources/language/resource.language.am_et/: strings.po
screensaver.stars/resources/language/resource.language.ar_sa/: strings.po
screensaver.stars/resources/language/resource.language.az_az/: strings.po
screensaver.stars/resources/language/resource.language.be_by/: strings.po
screensaver.stars/resources/language/resource.language.bg_bg/: strings.po
screensaver.stars/resources/language/resource.language.bs_ba/: strings.po
screensaver.stars/resources/language/resource.language.ca_es/: strings.po
screensaver.stars/resources/language/resource.language.cs_cz/: strings.po
screensaver.stars/resources/language/resource.language.cy_gb/: strings.po
screensaver.stars/resources/language/resource.language.da_dk/: strings.po
screensaver.stars/resources/language/resource.language.de_de/: strings.po
screensaver.stars/resources/language/resource.language.el_gr/: strings.po
screensaver.stars/resources/language/resource.language.en_au/: strings.po
screensaver.stars/resources/language/resource.language.en_gb/: strings.po
screensaver.stars/resources/language/resource.language.en_nz/: strings.po
screensaver.stars/resources/language/resource.language.en_us/: strings.po
screensaver.stars/resources/language/resource.language.eo/: strings.po
screensaver.stars/resources/language/resource.language.es_ar/: strings.po
screensaver.stars/resources/language/resource.language.es_es/: strings.po
screensaver.stars/resources/language/resource.language.es_mx/: strings.po
screensaver.stars/resources/language/resource.language.et_ee/: strings.po
screensaver.stars/resources/language/resource.language.eu_es/: strings.po
screensaver.stars/resources/language/resource.language.fa_af/: strings.po
screensaver.stars/resources/language/resource.language.fa_ir/: strings.po
screensaver.stars/resources/language/resource.language.fi_fi/: strings.po
screensaver.stars/resources/language/resource.language.fo_fo/: strings.po
screensaver.stars/resources/language/resource.language.fr_ca/: strings.po
screensaver.stars/resources/language/resource.language.fr_fr/: strings.po
screensaver.stars/resources/language/resource.language.gl_es/: strings.po
screensaver.stars/resources/language/resource.language.he_il/: strings.po
screensaver.stars/resources/language/resource.language.hi_in/: strings.po
screensaver.stars/resources/language/resource.language.hr_hr/: strings.po
screensaver.stars/resources/language/resource.language.hu_hu/: strings.po
screensaver.stars/resources/language/resource.language.id_id/: strings.po
src/: StarField.cpp  StarField.h  Stars.cpp  types.h
src/shaders/: Shader.cpp
(+37 files in other folders)
